--- a/infrastructure/eks_cluster.yml
+++ b/infrastructure/eks_cluster.yml
@@ -17,9 +17,12 @@ Resources:
       Name: !Sub "${EnvName}-CLUSTER"
       ResourcesVpcConfig:
         SecurityGroupIds:
-          Fn::ImportValue: !Sub "${EnvName}-CPSG"
+          - Fn::ImportValue: !Sub "${EnvName}-CPSG"
         SubnetIds:
-          Fn::ImportValue: !Sub "${EnvName}-SUBNETS"
+          - Fn::ImportValue: !Sub "${EnvName}-PUB1-SN"
+          - Fn::ImportValue: !Sub "${EnvName}-PUB2-SN"
+          - Fn::ImportValue: !Sub "${EnvName}-PRI1-SN"
+          - Fn::ImportValue: !Sub "${EnvName}-PRI2-SN"
       RoleArn: arn:aws:iam::244468422315:role/eksRole
 
 Outputs:
@@ -27,4 +30,5 @@ Outputs:
   EKSCluster:
     Description: The EKS Cluster
     Value: !Ref EKSCluster
-    
+    Export:
+      Name: !Sub "${EnvName}-CLUSTER"
