--- a/infrastructure/network.yml
+++ b/infrastructure/network.yml
@@ -56,7 +56,7 @@ Resources:
             MapPublicIpOnLaunch: true
             Tags:
                 - Key: Name
-                  Value: !Sub $(EnvName) Public Subnet 1
+                  Value: !Sub ${EnvName} Public Subnet 1
                 - Key: kubernetes.io/role/elb
                   Value: 1
 
@@ -69,7 +69,7 @@ Resources:
             MapPublicIpOnLaunch: true
             Tags:
                 - Key: Name
-                  Value: !Sub $(EnvName) Public Subnet 2
+                  Value: !Sub ${EnvName} Public Subnet 2
                 - Key: kubernetes.io/role/elb
                   Value: 1
 
@@ -81,7 +81,7 @@ Resources:
             CidrBlock: !Ref PrivateSubnet1CIDR
             Tags:
                 - Key: Name
-                  Value: !Sub $(EnvName) Private Subnet 1
+                  Value: !Sub "${EnvName} Private Subnet 1"
                 - Key: kubernetes.io/role/internal-elb
                   Value: 1
 
@@ -93,7 +93,7 @@ Resources:
             CidrBlock: !Ref PrivateSubnet2CIDR
             Tags:
                 - Key: Name
-                  Value: !Sub $(EnvName) Private Subnet 2
+                  Value: !Sub ${EnvName} Private Subnet 2
                 - Key: kubernetes.io/role/internal-elb
                   Value: 1
 
