--- a/infrastructure/jenkins.yml
+++ b/infrastructure/jenkins.yml
@@ -33,6 +33,11 @@ Resources:
             FromPort: 8080
             ToPort: 8080
             CidrIp: 0.0.0.0/0
+          - IpProtocol: tcp
+            FromPort: 80
+            ToPort: 80
+            CidrIp: 0.0.0.0/0
+    
     
     BastionInstance:
         Type: AWS::EC2::Instance
