--- a/infrastructure/jenkins.yml
+++ b/infrastructure/jenkins.yml
@@ -78,4 +78,6 @@ Resources:
                     echo "deb https://apt.kubernetes.io/ kubernetes-xenial main" | sudo tee -a /etc/apt/sources.list.d/kubernetes.list
                     sudo apt-get update
                     sudo apt-get install -y kubectl
+                    sudo apt install make -y
+                    sudo apt install pylint3 -y
 
