--- a/deployment/deployment.yml
+++ b/deployment/deployment.yml
@@ -27,3 +27,21 @@ spec:
         ports:
         - containerPort: 80
           protocol: TCP
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: capstone-chatbot
+spec:
+  type: LoadBalancer
+  selector:
+    app: capstone-chatbot
+  ports:
+    - name: http
+      protocol: TCP
+      port: 80
+      targetPort: 80
+    - name: https
+      protocol: TCP
+      port: 443
+      targetPort: 443
